--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic-native/device": "^4.5.2",
     "@ionic-native/diagnostic": "^4.7.0",
     "@ionic-native/email-composer": "^4.5.2",
-    "@ionic-native/facebook": "^4.11.0",
+    "@ionic-native/facebook": "^4.12.0",
     "@ionic-native/geolocation": "^4.11.0",
     "@ionic-native/globalization": "^4.5.2",
     "@ionic-native/in-app-browser": "^4.10.0",
@@ -50,6 +50,7 @@
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-email-composer": "^0.8.12",
+    "cordova-plugin-facebook4": "^2.3.0",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-globalization": "^1.0.9",
     "cordova-plugin-inappbrowser": "^3.0.0",
@@ -105,6 +106,11 @@
       },
       "cordova-android-firebase-gradle-release": {
         "FIREBASE_VERSION": "15.+"
+      },
+      "cordova-plugin-facebook4": {
+        "APP_ID": "210518629503681",
+        "APP_NAME": "joyBees",
+        "ANDROID_SDK_VERSION": "4.+"
       }
     },
     "platforms": [
